Changes to make solver run on one machine